GUI - Add eslint test without fix to package.json scripts

--- a/simple-paste-client/simple-paste/package.json
+++ b/simple-paste-client/simple-paste/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint ./src/**/*.js  --fix"
+    "lint": "npx eslint ./src/**/*.js  --fix",
+    "lint-test": "npx eslint ./src/**/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
