--- a/simple-paste-client/simple-paste/.eslintrc
+++ b/simple-paste-client/simple-paste/.eslintrc
@@ -14,6 +14,7 @@
     "react/jsx-sort-props": 1,
     "react/jsx-one-expression-per-line": 0,
     "react/prop-types": 0,
+    "react/jsx-props-no-spreading": [2, { "custom": "ignore" }],
     "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": true }],
     "no-underscore-dangle": 0,
     "no-console": 0,
