API - Add express to dependencies 📦

--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -7,5 +7,8 @@
     "test": "npm test"
   },
   "author": "Piotr Niewiejski",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
