--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -4,7 +4,9 @@
   "description": "Service exposes read and write api for SimplePaste",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha --recursive ./src/**/*.test.js"
+    "test": "npx mocha --recursive ./src/**/*.test.js",
+    "lint": "eslint ./src/**/*.js --fix",
+    "lint-test": "eslint ./src/**/*.js"
   },
   "author": "Piotr Niewiejski",
   "license": "MIT",
@@ -12,6 +14,12 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "mocha": "^7.1.2"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "mocha": "^7.1.2",
+    "prettier": "^2.0.5"
   }
 }
