--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -11,7 +11,8 @@
   "author": "Piotr Niewiejski",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
