API - Add Joi (@hapi/joi) to dependencies 📦
The old npm package `joi` has been deprecated for some time.
Instead one should use `@hapi/joi`.

Additional information:
 - See deprecation information on: https://www.npmjs.com/package/joi
 - See the current Joi package on: https://www.npmjs.com/package/@hapi/joi

--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -11,6 +11,7 @@
   "author": "Piotr Niewiejski",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
     "winston": "^3.2.1"
   },
