--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -4,7 +4,7 @@
   "description": "Service exposes read and write api for SimplePaste",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha --recursive ./src/**/*.test.js",
+    "test": "NODE_ENV=test npx mocha --recursive ./src/**/*.test.js",
     "lint": "eslint ./src/**/*.js --fix",
     "lint-test": "eslint ./src/**/*.js"
   },
