--- a/simple-paste-api/.eslintrc
+++ b/simple-paste-api/.eslintrc
@@ -6,6 +6,9 @@
   "plugins": [
     "prettier"
   ],
+  "parserOptions": {
+    "ecmaVersion": 10
+  },
   "rules": {
     "no-use-before-define": [2, { "functions": false }],
     "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": true }],
