GUI - Modify add API proxy to nginx server
This add a new location in the nginx server with proxy_pass
to make calls to the backend service.

For now I'm leaving the upstream definition which I was using
with docker on my local machine.

`host.docker.internal` is a special DNS within the Docker which is
supposed to be used **for development only**.

Quoting from the Docker documentation:
> From 18.03 onwards our recommendation is to connect to the special
> DNS name host.docker.internal, which resolves to the internal
> IP address used by the host.
> This is for development purpose and will not work in a production environment
> outside of Docker Desktop for Mac.

--- a/simple-paste-client/nginx.conf
+++ b/simple-paste-client/nginx.conf
@@ -1,9 +1,18 @@
+upstream simplepaste-api {
+  server host.docker.internal:3000;
+}
+
 server {
   listen 80;
 
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
     try_files $uri $uri/ /index.html;
+  }
+
+  location /api/ {
+    proxy_set_header X-Simple-Paste $host;
+    proxy_pass http://simplepaste-api/;
   }
 }
