--- a/.github/workflows/api-unit.yml
+++ b/.github/workflows/api-unit.yml
@@ -33,6 +33,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run linter test (Check code style)
+        run: npm run lint-test
+        env:
+          CI: true
+
       - name: Run unit tests
         run: npm test
         env:
