--- a/simple-paste-client/simple-paste/package.json
+++ b/simple-paste-client/simple-paste/package.json
@@ -20,8 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint ./src/**/*.js  --fix",
-    "lint-test": "npx eslint ./src/**/*.js"
+    "lint": "npx eslint './src/**/*.js'  --fix",
+    "lint-test": "npx eslint './src/**/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
