--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test npx mocha --recursive ./src/**/*.test.js",
-    "lint": "eslint ./src/**/*.js --fix",
-    "lint-test": "eslint ./src/**/*.js"
+    "lint": "eslint './src/**/*.js' --fix",
+    "lint-test": "eslint './src/**/*.js'"
   },
   "author": "Piotr Niewiejski",
   "license": "MIT",
