GUI - Modify nginx proxy config to add X-Forwarded-For header

--- a/simple-paste-client/nginx.conf
+++ b/simple-paste-client/nginx.conf
@@ -13,6 +13,7 @@ server {
 
   location /api/ {
     proxy_set_header X-Simple-Paste $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_pass http://simplepaste-api/;
   }
 }
