API - Fix npm scripts running mocha to include all tests
- When running mocha tests via npm scripts without wrapping
  path argument in quotes not all tests were run.
  In this commit the path argument is wrapped in quotes like it
  was done previously for eslint tests.
- Added npm script which runs mocha with `--watch` flag.

--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -4,7 +4,8 @@
   "description": "Service exposes read and write api for SimplePaste",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test npx mocha --recursive ./src/**/*.test.js",
+    "test": "NODE_ENV=test npx mocha --recursive './src/**/*.test.js'",
+    "test-watch": "NODE_ENV=test npx mocha --recursive './src/**/*.test.js' --watch",
     "lint": "eslint './src/**/*.js' --fix",
     "lint-test": "eslint './src/**/*.js'"
   },
