--- a/simple-paste-client/nginx.conf
+++ b/simple-paste-client/nginx.conf
@@ -12,6 +12,7 @@ server {
   }
 
   location /api/ {
+    proxy_http_version 1.1;
     proxy_set_header X-Simple-Paste $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_pass http://simplepaste-api/;
