--- a/simple-paste-client/nginx.conf
+++ b/simple-paste-client/nginx.conf
@@ -1,5 +1,5 @@
-upstream simplepaste-api {
-  server host.docker.internal:3000;
+upstream simple-paste-api {
+  server simple-paste-api:3000;
 }
 
 server {
@@ -13,8 +13,11 @@ server {
 
   location /api/ {
     proxy_http_version 1.1;
+    proxy_set_header Host $host;
     proxy_set_header X-Simple-Paste $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass http://simplepaste-api/;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Host $server_name;
+    proxy_pass http://simple-paste-api/;
   }
 }
