--- a/simple-paste-api-types/package.json
+++ b/simple-paste-api-types/package.json
@@ -4,17 +4,29 @@
   "description": "Service exposes read and write api for SimplePaste",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "lint": "eslint './src/**/*.ts ./*.ts' --fix",
+    "lint-test": "eslint './src/**/*.ts ./*.ts'"
   },
   "keywords": [],
   "author": "Piotr Niewiejski",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "eslint-config-airbnb-typescript": "^10.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-typescript": "^0.14.0",
+    "prettier-tslint": "^0.4.2",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.4",
-    "express": "^4.17.1"
+    "eslint": "^7.8.1",
+    "express": "^4.17.1",
+    "prettier": "^2.1.1"
   }
 }
