--- a/simple-paste-api-types/.gitignore
+++ b/simple-paste-api-types/.gitignore
@@ -8,7 +8,10 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
+lerna-debug.log
+
+# Build (Typescript)
+build/*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
