--- a/simple-paste-api-types/package.json
+++ b/simple-paste-api-types/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "lint": "eslint './src/**/*.ts ./*.ts' --fix",
+    "start-dev": "ts-node index.ts",
+    "lint": "eslint './src/**/*.ts' --fix",
     "lint-test": "eslint './src/**/*.ts ./*.ts'"
   },
   "keywords": [],
@@ -20,13 +21,18 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-typescript": "^0.14.0",
     "prettier-tslint": "^0.4.2",
+    "ts-node": "^9.0.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@types/express": "^4.17.8",
+    "@types/hapi__joi": "^17.1.4",
     "@types/node": "^14.6.4",
     "eslint": "^7.8.1",
     "express": "^4.17.1",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "winston": "^3.3.3"
   }
 }
