--- a/simple-paste-api-types/package.json
+++ b/simple-paste-api-types/package.json
@@ -4,7 +4,7 @@
   "description": "Service exposes read and write api for SimplePaste",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start-dev": "ts-node index.ts",
     "lint": "eslint './src/**/*.ts' --fix",
@@ -14,13 +14,16 @@
   "author": "Piotr Niewiejski",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.13",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "eslint-config-airbnb-typescript": "^10.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-typescript": "^0.14.0",
+    "jest": "^26.4.2",
     "prettier-tslint": "^0.4.2",
+    "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.2"
