--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -7,8 +7,8 @@
     "test": "jest --verbose",
     "build": "tsc",
     "start-dev": "ts-node index.ts",
-    "lint": "eslint './src/**/*.ts' --fix",
-    "lint-test": "eslint './src/**/*.ts ./*.ts'"
+    "lint": "eslint './src/**/*.ts' './*.ts' --fix",
+    "lint-test": "eslint './src/**/*.ts' './*.ts'"
   },
   "keywords": [],
   "author": "Piotr Niewiejski",
