Update Dockerfile to TS project

--- a/simple-paste-api/Dockerfile
+++ b/simple-paste-api/Dockerfile
@@ -8,8 +8,10 @@ RUN npm install
 
 COPY . .
 
+RUN npm run build
+
 ENV PORT 3000
 EXPOSE ${PORT}
 
 ENV NODE_ENV production
-CMD ["node", "index.js"]
+CMD ["node", "./build/index.js"]
