Client - Set proxy port in nginx via API_PROXY_PORT env
New nginx docker images allow for env substitution before nginx
is started. This is why we're copying a template to the image and
not the actual config.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     build:
       context: ./simple-paste-client/
       dockerfile: Dockerfile
+    environment:
+      - API_PROXY_PORT=3000
     deploy:
       restart_policy:
         condition: on-failure
