--- a/k8s/client-deployment.yml
+++ b/k8s/client-deployment.yml
@@ -24,6 +24,8 @@ spec:
         env:
           - name: API_PROXY_PORT
             value: "3000"
+          - name: API_PROXY_NAME
+            value: simple-paste-api # Has to be the same as API Service name
         resources:
           limits:
             memory: "128Mi"
