--- a/simple-paste-api/package.json
+++ b/simple-paste-api/package.json
@@ -29,7 +29,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
+    "joi": "^17.1.1",
     "@types/express": "^4.17.8",
     "@types/hapi__joi": "^17.1.4",
     "@types/node": "^14.6.4",
